crates/wasm-workers/src/workflow/snapshots/advance_paused_workflow_until_finished@advance_paused_workflow_full_advance_1.snap
---
source: crates/wasm-workers/src/workflow/workflow_worker.rs
expression: "json!({\n    \"finished\": advance.finished.is_some(), \"requested_captured_writes_len\":\n    requested.captured_writes.len(), \"replayed_captured_writes_len\":\n    replay.captured_writes.len(),\n})"
---
{
  "finished": false,
  "requested_captured_writes_len": 3,
  "replayed_captured_writes_len": 3
}
