crates/wasm-workers/src/workflow/snapshots/advance_paused_workflow_until_finished@advance_paused_workflow_full_replay_1.snap
---
source: crates/wasm-workers/src/workflow/workflow_worker.rs
expression: redact_replay(&replay)
---
{
  "captured_writes": [
    {
      "Append": {
        "execution_id": "E_00000000000000000000000000",
        "version": 2,
        "req": {
          "created_at": "1970-01-01T00:00:00.100Z",
          "event": {
            "history_event": {
              "event": {
                "type": "join_set_create",
                "join_set_id": "g:1"
              }
            }
          }
        },
        "backtraces": []
      }
    },
    {
      "AppendBatchCreateNewExecution": {
        "current_time": "1970-01-01T00:00:00.100Z",
        "batch": [
          {
            "created_at": "1970-01-01T00:00:00.100Z",
            "event": {
              "history_event": {
                "event": {
                  "type": "join_set_request",
                  "join_set_id": "g:1",
                  "request": {
                    "type": "child_execution_request",
                    "child_execution_id": "E_00000000000000000000000000.g:1_1",
                    "target_ffqn": "testing:fibo/fibo.fibo",
                    "params": [
                      10
                    ],
                    "result": {
                      "Ok": null
                    }
                  }
                }
              }
            }
          }
        ],
        "execution_id": "E_00000000000000000000000000",
        "version": 3,
        "child_req": [
          {
            "created_at": "1970-01-01T00:00:00.100Z",
            "execution_id": "E_00000000000000000000000000.g:1_1",
            "ffqn": "testing:fibo/fibo.fibo",
            "params": [
              10
            ],
            "parent": [
              "E_00000000000000000000000000",
              "g:1"
            ],
            "scheduled_at": "1970-01-01T00:00:00.100Z",
            "component_id": {
              "component_type": "activity",
              "name": "",
              "component_digest": "sha256:<REDACTED>"
            },
            "deployment_id": "Dep_00000000000000000000000000",
            "metadata": {},
            "scheduled_by": null,
            "paused": false,
            "max_persisted_value_size_bytes": 18446744073709551615
          }
        ],
        "backtraces": []
      }
    },
    {
      "Append": {
        "execution_id": "E_00000000000000000000000000",
        "version": 4,
        "req": {
          "created_at": "1970-01-01T00:00:00.100Z",
          "event": {
            "history_event": {
              "event": {
                "type": "join_next",
                "join_set_id": "g:1",
                "run_expires_at": "1970-01-01T00:00:00.100Z",
                "requested_ffqn": "testing:fibo/fibo.fibo",
                "closing": false
              }
            }
          }
        },
        "backtraces": []
      }
    }
  ]
}
